--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,5 +61,5 @@ bind + resize-pane -U 1
 new-session -s z -n mutt mutt
 #new-window -n finch finch
 #new-window -n mpc ncmpcpp
-new-window -n @ su
+new-window -n @ "su -p"
 
