xxkb: add witray to ignore list

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 #set-option -g default-command "ssh -Y noktoborus@wisp"
 set-option -g set-titles on
-
+set-option -g allow-rename off
 set-option -g status-interval 1
 set-option -g status-right-length 100
 #set-option -g status-right "\"#T\" #(sensors | grep temp1 | awk '{print $2}') (#(cpufreq-info | sed 's/.*current CPU frequency is/##/' | sed 's/\.$//' | grep '^##' | cut -d' ' -f 2- | tr '\n' '#' | sed 's/#/, /g' | sed 's/, $//'))"
