update tmux neworattach

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,16 +50,15 @@ bind l select-pane -R
 bind k select-pane -U
 bind j select-pane -D
 
-bind < resize-pane -L 1
 bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
 
 
+if-shell "whoami | grep '^noktoborus$' && hostname -s | grep '^sylph$'" "new-window -n mutt mutt; new-window -n canto canto; new-window -n @ 'su -p'"
 #split-window -h -l 99
-
-new-session -s z -n mutt mutt
+#new-session -s z -n mutt mutt
 #new-window -n finch finch
 #new-window -n mpc ncmpcpp
-new-window -n @ "su -p"
+#new-window -n @ "su -p"
 
