add tmux sync panes hotkey

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,9 @@ set-option -g lock-after-time 0
 #set-option -g lock-after-time 3600
 #set-option -g lock-command "vlock"
 
+bind C-s set-option synchronize-panes on
+bind C-a set-option synchronize-panes off
+
 bind C-q select-window -t 0
 bind C-w select-window -t 1
 bind C-e select-window -t 2
