tmux: fix autorun

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ bind - resize-pane -D 1
 bind + resize-pane -U 1
 
 
-if-shell "whoami | grep '^noktoborus$' && hostname -s | grep '^sylph$'" "new-window -n mutt mutt; new-window -n canto canto; new-window -n @ 'su -p'"
+if-shell "whoami | grep '^noktoborus$' && hostname -s | grep '^sylph$'" "new-window -n mutt mutt; new-window -n RSS canto; new-window -n IRC irssi new-window -n @ 'su -p'"
 #split-window -h -l 99
 #new-session -s z -n mutt mutt
 #new-window -n finch finch
