--- a/.i3/config
+++ b/.i3/config
@@ -28,6 +28,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec evilvte
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -37,7 +38,7 @@ bindsym $mod+c exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -72,7 +73,6 @@ bindsym $mod+v split v
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
 
-bindsym $mod+enter exec evilvte
 bindsym $mod+o exec light-locker-command -l
 
 # change container layout (stacked, tabbed, toggle split)
@@ -152,7 +152,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        #status_command i3status
+        status_command i3status
 }
 
 exec dex -ae i3
