--- a/.i3status.conf
+++ b/.i3status.conf
@@ -41,7 +41,7 @@ cpu_temperature 2 {
 }
 
 wireless wlan0 {
-        format_up = "%ip (%quality@%essid)"
+        format_up = "%ip (%quality at %essid)"
         format_down = "W: down"
 }
 
