--- a/.i3status.conf
+++ b/.i3status.conf
@@ -13,8 +13,8 @@ general {
 
 order += "disk /"
 order += "disk /home"
-order += "wireless wlan0"
-order += "ethernet eth0"
+order += "wireless wlp3s0"
+order += "ethernet enp0s25"
 order += "cpu_temperature 0"
 order += "cpu_temperature 1"
 order += "cpu_temperature 2"
@@ -40,12 +40,12 @@ cpu_temperature 2 {
 	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp3_input"
 }
 
-wireless wlan0 {
+wireless wlp3s0 {
         format_up = "%ip (%quality at %essid)"
         format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
         format_up = "%ip (%speed)"
         format_down = "E: down"
