add status for second battery

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -19,6 +19,7 @@ order += "cpu_temperature 0"
 order += "cpu_temperature 1"
 order += "cpu_temperature 2"
 order += "battery 0"
+order += "battery 1"
 order += "load"
 order += "tztime local"
 
@@ -59,6 +60,17 @@ battery 0 {
 #		status_full = "☻"
 }
 
+battery 1 {
+        format = "%status %percentage %remaining"
+		low_threshold = 10
+}
+
+battery 2 {
+        format = "%status %percentage %remaining"
+		low_threshold = 10
+}
+
+
 tztime local {
         format = "%H:%M:%S"
 }
@@ -74,3 +86,4 @@ disk "/home" {
 disk "/" {
         format = "%free"
 }
+
