Update vim and tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 #set-option -g default-command "ssh -Y noktoborus@wisp"
+set-option -g history-limit 65536
 set-option -g set-titles on
 set-option -g allow-rename off
 set-option -g status-interval 1
